tests/should-pass/eval/pat_match_anon.fk
foo : Int -> {Int -> Int}.
foo n = {n -> n}.

main : Int.
main = (foo 3) 4.
