tests/should-fail/typing/pat_match_dup.fk
foo : Int -> Int -> Int.
foo n n = n.

main : Int.
main = foo 0 1.
